add management team section in about page

--- a/views/aboutPage/index.html
+++ b/views/aboutPage/index.html
@@ -103,7 +103,7 @@
       </ul>
     </nav>
     <div class="hero">
-      <img src="https://i.imgur.com/1jJWhXP.png" alt="Industrial Facility" />
+      <img src="https://i.imgur.com/UvGDijb.png" alt="Industrial Facility" />
     </div>
     <!----- END OF HEADER SECTION HTML ----->
 
@@ -113,7 +113,7 @@
         <div class="about-image">
           <div class="video-wrapper">
             <img
-              src="../homePage/images/valve-control.png"
+              src="https://i.imgur.com/738wFGw.png"
               alt="Kỹ thuật viên Kỳ Long"
             />
             <div class="play-button">
@@ -123,7 +123,7 @@
         </div>
         <div class="about-text">
           <h1 class="page-intro">Công ty TNHH Thương Mại Dịch Vụ Kỳ Long</h1>
-          <h2 class="sub-intro">Kỳ Long</h2>
+          <h2 class="sub-intro"></h2>
           <p>
             Chào mừng bạn đến với Công ty KỲ LONG, một công ty năng lượng uy tín
             có nhiều kinh nghiệm trong công việc cung cấp khí đốt tự nhiên cho
@@ -226,7 +226,7 @@
             <!-- Gas Transport Image -->
             <div class="culture-image middle-image">
               <img
-                src="https://i.imgur.com/uc8Pw4A.png"
+                src="https://i.imgur.com/l5eqS2D.png"
                 alt="Gas Transport Systems"
               />
             </div>
@@ -249,7 +249,7 @@
             <!-- Top Image -->
             <div class="culture-image">
               <img
-                src="https://i.imgur.com/xCGxbyD.png"
+                src="https://i.imgur.com/3xts2iI.png"
                 alt="Industrial Gas Facility"
               />
             </div>
@@ -270,7 +270,7 @@
             <!-- Bottom Image -->
             <div class="culture-image">
               <img
-                src="https://i.imgur.com/1jJWhXP.png"
+                src="https://i.imgur.com/eOMemEG.png"
                 alt="Kỹ thuật viên Kỳ Long"
               />
             </div>
@@ -279,6 +279,55 @@
       </div>
     </section>
     <!----- END OF BUSINESS CULTURE SECTION HTML ----->
+
+    <!----- MANAGEMENT TEAM SECTION HTML ----->
+    <section class="management-team-section" id="doi-ngu-quan-ly">
+      <div class="team-content">
+        <h2 class="section-title">Đội ngũ quản lý</h2>
+
+        <div class="team-members">
+          <div class="team-member">
+            <div class="member-image">
+              <img
+                src="https://i.imgur.com/JWlVBIi.png"
+                alt="Phong Trần - Giám đốc điều hành"
+              />
+            </div>
+            <div class="member-info">
+              <h3 class="member-name">Trần Kỳ Phong</h3>
+              <p class="member-position">Giám đốc điều hành</p>
+            </div>
+          </div>
+
+          <div class="team-member">
+            <div class="member-image">
+              <img
+                src="https://i.imgur.com/miUmz82.png"
+                alt="Jonas Guiliani - Giám đốc mua hàng"
+              />
+            </div>
+            <div class="member-info">
+              <h3 class="member-name">Jonas Guiliani</h3>
+              <p class="member-position">Giám đốc mua hàng</p>
+            </div>
+          </div>
+
+          <div class="team-member">
+            <div class="member-image">
+              <img
+                src="/images/long-nguyen.jpg"
+                alt="Long Nguyen - Giám đốc vận hành"
+              />
+            </div>
+            <div class="member-info">
+              <h3 class="member-name">Nguyễn Long</h3>
+              <p class="member-position">Giám đốc vận hành</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!----- END OF MANAGEMENT TEAM SECTION HTML ----->
 
     <!----- FOOTER SECTION HTML ----->
     <footer class="footer">
