change management team pics in about page

--- a/views/aboutPage/index.html
+++ b/views/aboutPage/index.html
@@ -289,8 +289,8 @@
           <div class="team-member">
             <div class="member-image">
               <img
-                src="https://i.imgur.com/JWlVBIi.png"
-                alt="Phong Trần - Giám đốc điều hành"
+                src="https://i.imgur.com/yQz0eeM.png"
+                alt="Trần Kỳ Phong - Giám đốc điều hành"
               />
             </div>
             <div class="member-info">
@@ -302,7 +302,7 @@
           <div class="team-member">
             <div class="member-image">
               <img
-                src="https://i.imgur.com/miUmz82.png"
+                src="https://i.imgur.com/miUmz82.jpeg"
                 alt="Jonas Guiliani - Giám đốc mua hàng"
               />
             </div>
@@ -315,12 +315,12 @@
           <div class="team-member">
             <div class="member-image">
               <img
-                src="/images/long-nguyen.jpg"
-                alt="Long Nguyen - Giám đốc vận hành"
+                src="https://i.imgur.com/lIeYaAP.png"
+                alt="Nguyễn Hoàng Long - Giám đốc vận hành"
               />
             </div>
             <div class="member-info">
-              <h3 class="member-name">Nguyễn Long</h3>
+              <h3 class="member-name">Nguyễn Hoàng Long</h3>
               <p class="member-position">Giám đốc vận hành</p>
             </div>
           </div>
