change home page banner image to imgur links

--- a/views/homePage/index.html
+++ b/views/homePage/index.html
@@ -95,10 +95,7 @@
     </nav>
 
     <div class="hero">
-      <img
-        src="homePage/images/IndustrialStorageFacility.png"
-        alt="Industrial Facility"
-      />
+      <img src="https://i.imgur.com/NztmNm7.png" alt="Industrial Facility" />
     </div>
     <!----- END OF HEADER SECTION HTML ----->
 
