reorganize news pages and add new article 2

--- a/views/aboutPage/index.html
+++ b/views/aboutPage/index.html
@@ -88,7 +88,7 @@
           >
         </li>
         <li>
-          <a href="/newsPage" id="news" title="Tin tức và cập nhật từ Kỳ Long"
+          <a href="/newsMain" id="news" title="Tin tức và cập nhật từ Kỳ Long"
             >TIN TỨC</a
           >
         </li>
