--- a/views/contactPage/index.html
+++ b/views/contactPage/index.html
@@ -84,7 +84,7 @@
           >DỊCH VỤ</a
         >
 
-        <a href="/newsPage" id="news" title="Tin tức và cập nhật từ Kỳ Long"
+        <a href="/newsMain" id="news" title="Tin tức và cập nhật từ Kỳ Long"
           >TIN TỨC</a
         >
 
