--- a/views/homePage/index.html
+++ b/views/homePage/index.html
@@ -81,7 +81,7 @@
           >DỊCH VỤ</a
         >
 
-        <a href="/newsPage" id="news" title="Tin tức và cập nhật từ Kỳ Long"
+        <a href="/newsMain" id="news" title="Tin tức và cập nhật từ Kỳ Long"
           >TIN TỨC</a
         >
 
@@ -605,18 +605,18 @@
               <div class="news-date">01/03/2025</div>
             </div>
             <h3 class="news-item-title">
-              Khí thiên nhiên hóa lỏng LNG: Khái niệm và quy trình sản xuất
+              TỔNG QUAN VỀ DIỄN BIẾN GIÁ KHÍ LNG TRONG 5 NĂM QUA
             </h3>
             <div class="news-read-more">Xem chi tiết</div>
           </div>
 
-          <div class="news-item" data-article-url="/newsArticle1">
+          <div class="news-item" data-article-url="/newsArticle2">
             <div class="news-thumbnail">
-              <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức 2" />
+              <img src="https://i.imgur.com/0MGOlmy.png" alt="Tin tức 2" />
               <div class="news-date">25/02/2025</div>
             </div>
             <h3 class="news-item-title">
-              Khí thiên nhiên hóa lỏng LNG: Khái niệm và quy trình sản xuất
+              Khí đốt tự nhiên được khai thác từ đâu?
             </h3>
             <div class="news-read-more">Xem chi tiết</div>
           </div>
@@ -644,7 +644,7 @@
           </div>
         </div>
         <div class="news-view-all">
-          <a href="/newsPage" class="view-all-button">Xem tất cả tin tức</a>
+          <a href="/newsMain" class="view-all-button">Xem tất cả tin tức</a>
         </div>
       </div>
     </section>
