--- a/views/newsPage/newsArticle1/newsArticle1.html
+++ b/views/newsPage/newsArticle1/newsArticle1.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="../newsArticleCSS/newsArticle1.css" />
+    <link rel="stylesheet" href="newsPage/newsArticle1/newsArticle1.css" />
   </head>
   <body>
     <!----- HEADER SECTION HTML ----->
@@ -78,7 +78,7 @@
           title="Dịch vụ cung cấp khí đốt công nghiệp Kỳ Long"
           >DỊCH VỤ</a
         >
-        <a href="/newsPage" id="news" title="Tin tức và cập nhật từ Kỳ Long"
+        <a href="/newsMain" id="news" title="Tin tức và cập nhật từ Kỳ Long"
           >TIN TỨC</a
         >
         <a
@@ -92,16 +92,6 @@
     <!----- END OF HEADER SECTION HTML ----->
 
     <article>
-      <h1>
-        Giá khí LNG đang trở thành một trong những vấn đề nóng hổi trong ngành
-        năng lượng hiện nay
-      </h1>
-      <p>
-        Với sự phát triển nhanh chóng của thị trường khí hóa lỏng, cũng như
-        những biến động không ngừng của giá cả, việc theo dõi và cập nhật chính
-        xác về giá khí LNG là vô cùng cần thiết.
-      </p>
-
       <h2>TỔNG QUAN VỀ DIỄN BIẾN GIÁ KHÍ LNG TRONG 5 NĂM QUA</h2>
       <p>
         Trong những năm gần đây, diễn biến giá khí LNG trong 5 năm qua đã có
