--- a/views/newsPage/newsMain/newsMain.html
+++ b/views/newsPage/newsMain/newsMain.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="newsPage/newsMain/newsMain.css" />
   </head>
   <body>
     <!----- HEADER SECTION HTML ----->
@@ -78,7 +78,7 @@
           title="Dịch vụ cung cấp khí đốt công nghiệp Kỳ Long"
           >DỊCH VỤ</a
         >
-        <a href="/newsPage" id="news" title="Tin tức và cập nhật từ Kỳ Long"
+        <a href="/newsMain" id="news" title="Tin tức và cập nhật từ Kỳ Long"
           >TIN TỨC</a
         >
         <a
@@ -110,7 +110,7 @@
             <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức Kỳ Long" />
           </div>
           <div class="news-content">
-            <span class="news-category">Công Nghệ</span>
+            <span class="news-category">Thị Trường</span>
             <h3 class="news-title">
               TỔNG QUAN VỀ DIỄN BIẾN GIÁ KHÍ LNG TRONG 5 NĂM QUA
             </h3>
@@ -123,18 +123,15 @@
         </a>
 
         <!-- News Item 2 -->
-        <a href="/newsArticle1" class="news-card">
+        <a href="/newsArticle2" class="news-card">
           <div class="news-thumbnail">
-            <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức Kỳ Long" />
+            <img src="https://i.imgur.com/0MGOlmy.png" alt="Tin tức Kỳ Long" />
           </div>
           <div class="news-content">
-            <span class="news-category">Doanh Nghiệp</span>
-            <h3 class="news-title">
-              TỔNG QUAN VỀ DIỄN BIẾN GIÁ KHÍ LNG TRONG 5 NĂM QUA
-            </h3>
+            <span class="news-category">Công Nghệ</span>
+            <h3 class="news-title">Khí đốt tự nhiên được khai thác từ đâu?</h3>
             <p class="news-excerpt">
-              Giá khí LNG đang trở thành một trong những vấn đề nóng hổi trong
-              ngành năng lượng hiện nay.ng.
+              Bạn có bao giờ thắc mắc: Khí đốt tự nhiên được khai thác từ đâu?
             </p>
             <div class="news-date"><i>🕒</i> 28/02/2025</div>
           </div>
@@ -402,6 +399,6 @@
       </div>
     </footer>
     <!-- END OF FOOTER SECTION HTML -->
-    <script src="script.js"></script>
+    <script src="newsPage/newsMain/newsMain.js"></script>
   </body>
 </html>
