add product page

--- a/views/homePage/index.html
+++ b/views/homePage/index.html
@@ -68,7 +68,7 @@
         >
 
         <a
-          href="/productsPage"
+          href="/productMain"
           id="products"
           title="Sản phẩm khí đốt và thiết bị công nghiệp Kỳ Long"
           >SẢN PHẨM</a
@@ -171,7 +171,7 @@
             >, một công ty năng lượng uy tín có nhiều kinh nghiệm trong công
             việc cung cấp
             <a
-              href="/productsPage#khi-dot"
+              href="/productMain#khi-dot"
               title="Dịch vụ cung cấp khí đốt tự nhiên"
               >khí đốt tự nhiên</a
             >
@@ -489,7 +489,7 @@
               <div class="category-icon"></div>
               <div class="category-text">
                 <a
-                  href="/productsPage#nhien-lieu"
+                  href="/productMain#nhien-lieu"
                   title="Các sản phẩm nhiên liệu của Kỳ Long"
                   >NHIÊN LIỆU</a
                 >
@@ -500,7 +500,7 @@
               <div class="category-icon"></div>
               <div class="category-text">
                 <a
-                  href="/productsPage#che-tao"
+                  href="/productMain#che-tao"
                   title="Dịch vụ chế tạo của Kỳ Long"
                   >CHẾ TẠO</a
                 >
@@ -522,7 +522,7 @@
               <div class="category-icon"></div>
               <div class="category-text">
                 <a
-                  href="/productsPage#thiet-bi"
+                  href="/productMain#thiet-bi"
                   title="Thiết bị công nghiệp của Kỳ Long"
                   >THIẾT BỊ</a
                 >
@@ -541,7 +541,7 @@
                 </div>
                 <div class="service-name">
                   <a
-                    href="/productsPage#nhien-lieu"
+                    href="/productMain#nhien-lieu"
                     title="Nhiên liệu công nghiệp Kỳ Long"
                     >NHIÊN LIỆU</a
                   >
@@ -553,9 +553,7 @@
                   <img src="homePage/images/manufacturing.png" alt="Chế tạo" />
                 </div>
                 <div class="service-name">
-                  <a
-                    href="/productsPage#che-tao"
-                    title="Dịch vụ chế tạo Kỳ Long"
+                  <a href="/productMain#che-tao" title="Dịch vụ chế tạo Kỳ Long"
                     >CHẾ TẠO</a
                   >
                 </div>
@@ -578,7 +576,7 @@
                 </div>
                 <div class="service-name">
                   <a
-                    href="/productsPage#thiet-bi"
+                    href="/productMain#thiet-bi"
                     title="Thiết bị công nghiệp Kỳ Long"
                     >THIẾT BỊ</a
                   >
@@ -713,26 +711,26 @@
           <ul>
             <li>
               <a
-                href="/productsPage#nhien-lieu"
+                href="/productMain#nhien-lieu"
                 title="Nhiên liệu công nghiệp Kỳ Long"
                 >Nhiên liệu</a
               >
             </li>
             <li>
               <a
-                href="/productsPage#thiet-bi"
+                href="/productMain#thiet-bi"
                 title="Thiết bị công nghiệp Kỳ Long"
                 >Thiết bị</a
               >
             </li>
             <li>
-              <a href="/productsPage#che-tao" title="Sản phẩm chế tạo Kỳ Long"
+              <a href="/productMain#che-tao" title="Sản phẩm chế tạo Kỳ Long"
                 >Chế tạo</a
               >
             </li>
             <li>
               <a
-                href="/productsPage#phu-kien"
+                href="/productMain#phu-kien"
                 title="Phụ kiện công nghiệp Kỳ Long"
                 >Phụ kiện</a
               >
