--- a/views/newsPage/newsMain/newsMain.html
+++ b/views/newsPage/newsMain/newsMain.html
@@ -67,7 +67,7 @@
           >GIỚI THIỆU</a
         >
         <a
-          href="/productsPage"
+          href="/productMain"
           id="products"
           title="Sản phẩm khí đốt và thiết bị công nghiệp Kỳ Long"
           >SẢN PHẨM</a
@@ -308,26 +308,26 @@
           <ul>
             <li>
               <a
-                href="/productsPage#nhien-lieu"
+                href="/productMain#nhien-lieu"
                 title="Nhiên liệu công nghiệp Kỳ Long"
                 >Nhiên liệu</a
               >
             </li>
             <li>
               <a
-                href="/productsPage#thiet-bi"
+                href="/productMain#thiet-bi"
                 title="Thiết bị công nghiệp Kỳ Long"
                 >Thiết bị</a
               >
             </li>
             <li>
-              <a href="/productsPage#che-tao" title="Sản phẩm chế tạo Kỳ Long"
+              <a href="/productMain#che-tao" title="Sản phẩm chế tạo Kỳ Long"
                 >Chế tạo</a
               >
             </li>
             <li>
               <a
-                href="/productsPage#phu-kien"
+                href="/productMain#phu-kien"
                 title="Phụ kiện công nghiệp Kỳ Long"
                 >Phụ kiện</a
               >
