add service pages and some navigational notes

--- a/views/homePage/index.html
+++ b/views/homePage/index.html
@@ -75,7 +75,7 @@
         >
 
         <a
-          href="/servicePage"
+          href="/serviceMain"
           id="services"
           title="Dịch vụ cung cấp khí đốt công nghiệp Kỳ Long"
           >DỊCH VỤ</a
@@ -372,7 +372,7 @@
           </div>
           <h3 class="advantage-title">
             <a
-              href="/servicePage#sang-tao"
+              href="/serviceMain#sang-tao"
               title="Giải pháp sáng tạo từ Kỳ Long"
               >Sáng tạo</a
             >
@@ -390,7 +390,7 @@
           </div>
           <h3 class="advantage-title">
             <a
-              href="/servicePage#an-toan"
+              href="/serviceMain#an-toan"
               title="An toàn và giảm thiểu rủi ro với Kỳ Long"
               >Giảm thiểu rủi ro</a
             >
@@ -407,7 +407,7 @@
             <i class="fas fa-tachometer-alt"></i>
           </div>
           <h3 class="advantage-title">
-            <a href="/servicePage#toc-do" title="Dịch vụ nhanh chóng từ Kỳ Long"
+            <a href="/serviceMain#toc-do" title="Dịch vụ nhanh chóng từ Kỳ Long"
               >Nhanh chóng</a
             >
           </h3>
@@ -424,7 +424,7 @@
           </div>
           <h3 class="advantage-title">
             <a
-              href="/servicePage#de-dang"
+              href="/serviceMain#de-dang"
               title="Quy trình làm việc đơn giản với Kỳ Long"
               >Dễ dàng</a
             >
@@ -442,7 +442,7 @@
           </div>
           <h3 class="advantage-title">
             <a
-              href="/servicePage#linh-dong"
+              href="/serviceMain#linh-dong"
               title="Giải pháp linh động từ Kỳ Long"
               >Linh động</a
             >
@@ -460,7 +460,7 @@
           </div>
           <h3 class="advantage-title">
             <a
-              href="/servicePage#xu-huong"
+              href="/serviceMain#xu-huong"
               title="Công nghệ tiên tiến từ Kỳ Long"
               >Xu hướng</a
             >
@@ -511,7 +511,7 @@
               <div class="category-icon"></div>
               <div class="category-text">
                 <a
-                  href="/servicePage#van-tai"
+                  href="/serviceMain#van-tai"
                   title="Dịch vụ vận tải của Kỳ Long"
                   >VẬN TẢI</a
                 >
@@ -564,7 +564,7 @@
                   <img src="homePage/images/transportation.png" alt="Vận tải" />
                 </div>
                 <div class="service-name">
-                  <a href="/servicePage#van-tai" title="Dịch vụ vận tải Kỳ Long"
+                  <a href="/serviceMain#van-tai" title="Dịch vụ vận tải Kỳ Long"
                     >VẬN TẢI</a
                   >
                 </div>
@@ -743,27 +743,27 @@
           <ul>
             <li>
               <a
-                href="/servicePage#tu-van"
+                href="/serviceMain#tu-van"
                 title="Tư vấn giải pháp khí đốt Kỳ Long"
                 >Tư vấn</a
               >
             </li>
             <li>
               <a
-                href="/servicePage#lap-dat"
+                href="/serviceMain#lap-dat"
                 title="Lắp đặt hệ thống khí đốt Kỳ Long"
                 >Lắp đặt</a
               >
             </li>
             <li>
               <a
-                href="/servicePage#bao-tri"
+                href="/serviceMain#bao-tri"
                 title="Bảo trì hệ thống khí đốt Kỳ Long"
                 >Bảo trì</a
               >
             </li>
             <li>
-              <a href="/servicePage#van-tai" title="Vận tải nhiên liệu Kỳ Long"
+              <a href="/serviceMain#van-tai" title="Vận tải nhiên liệu Kỳ Long"
                 >Vận tải</a
               >
             </li>
