--- a/views/contactPage/index.html
+++ b/views/contactPage/index.html
@@ -1,3 +1,4 @@
+<!-- views\contactPage\index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -78,7 +79,7 @@
         >
 
         <a
-          href="/servicePage"
+          href="/serviceMain"
           id="services"
           title="Dịch vụ cung cấp khí đốt công nghiệp Kỳ Long"
           >DỊCH VỤ</a
@@ -270,27 +271,27 @@
           <ul>
             <li>
               <a
-                href="/servicePage#tu-van"
+                href="/serviceMain#tu-van"
                 title="Tư vấn giải pháp khí đốt Kỳ Long"
                 >Tư vấn</a
               >
             </li>
             <li>
               <a
-                href="/servicePage#lap-dat"
+                href="/serviceMain#lap-dat"
                 title="Lắp đặt hệ thống khí đốt Kỳ Long"
                 >Lắp đặt</a
               >
             </li>
             <li>
               <a
-                href="/servicePage#bao-tri"
+                href="/serviceMain#bao-tri"
                 title="Bảo trì hệ thống khí đốt Kỳ Long"
                 >Bảo trì</a
               >
             </li>
             <li>
-              <a href="/servicePage#van-tai" title="Vận tải nhiên liệu Kỳ Long"
+              <a href="/serviceMain#van-tai" title="Vận tải nhiên liệu Kỳ Long"
                 >Vận tải</a
               >
             </li>
