enforce files and folders naming convention

--- a/views/contactPages/contactMain.html
+++ b/views/contactPages/contactMain.html
@@ -1,4 +1,4 @@
-<!-- views\contactPage\index.html -->
+<!-- views\contactPage\contactMain.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,14 +9,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="../contactPage/styles.css" />
+    <link rel="stylesheet" href="contactPages/contactMain.css" />
   </head>
   <body>
     <!----- HEADER SECTION HTML ----->
     <header class="header">
       <div class="logo-container">
         <img
-          src="../homePage/images/logo.png"
+          src="../homePages/images/logo.png"
           alt="Ky Long Logo"
           class="logo"
         />
@@ -334,6 +334,6 @@
     </footer>
     <!----- END OF FOOTER SECTION HTML ----->
 
-    <script src="../contactPage/script.js"></script>
+    <script src="../contactPages/contactMain.js"></script>
   </body>
 </html>
