--- a/views/newsPages/newsArticle2/newsArticle2.html
+++ b/views/newsPages/newsArticle2/newsArticle2.html
@@ -9,14 +9,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="newsPage/newsArticle2/newsArticle2.css" />
+    <link rel="stylesheet" href="newsPages/newsArticle2/newsArticle2.css" />
   </head>
   <body>
     <!----- HEADER SECTION HTML ----->
     <header class="header">
       <div class="logo-container">
         <img
-          src="../homePage/images/logo.png"
+          src="../homePages/images/logo.png"
           alt="Ky Long Logo"
           class="logo"
         />
