--- a/views/newsPages/newsMain/newsMain.html
+++ b/views/newsPages/newsMain/newsMain.html
@@ -9,14 +9,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="newsPage/newsMain/newsMain.css" />
+    <link rel="stylesheet" href="newsPages/newsMain/newsMain.css" />
   </head>
   <body>
     <!----- HEADER SECTION HTML ----->
     <header class="header">
       <div class="logo-container">
         <img
-          src="../homePage/images/logo.png"
+          src="../homePages/images/logo.png"
           alt="Ky Long Logo"
           class="logo"
         />
@@ -400,6 +400,6 @@
       </div>
     </footer>
     <!-- END OF FOOTER SECTION HTML -->
-    <script src="newsPage/newsMain/newsMain.js"></script>
+    <script src="newsPages/newsMain/newsMain.js"></script>
   </body>
 </html>
