--- a/views/productPages/productMain.html
+++ b/views/productPages/productMain.html
@@ -9,14 +9,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="homePage/styles.css" />
-    <link rel="stylesheet" href="productPage/productMain.css" />
+    <link rel="stylesheet" href="homePages/homeMain.css" />
+    <link rel="stylesheet" href="productPages/productMain.css" />
   </head>
   <body>
     <!-- HEADER SECTION HTML -->
     <header class="header">
       <div class="logo-container">
-        <img src="homePage/images/logo.png" alt="Ky Long Logo" class="logo" />
+        <img src="homePages/images/logo.png" alt="Ky Long Logo" class="logo" />
         <div class="company-info">
           <div class="company-name">
             <a href="/" title="Công ty TNHH Đầu Tư Thương Mại Dịch Vụ Kỳ Long"
@@ -394,8 +394,8 @@
     </footer>
     <!-- END OF FOOTER SECTION HTML -->
 
-    <script src="homePage/script.js"></script>
-    <script src="productPage/productMain.js"></script>
+    <script src="homePages/script.js"></script>
+    <script src="productPages/productMain.js"></script>
     <script></script>
   </body>
 </html>
