--- a/views/servicePages/serviceMain.html
+++ b/views/servicePages/serviceMain.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="homePage/styles.css" />
+    <link rel="stylesheet" href="homePages/homeMain.css" />
     <link rel="stylesheet" href="servicePages/serviceMain.css" />
   </head>
 
@@ -17,7 +17,7 @@
     <!-- HEADER SECTION HTML -->
     <header class="header">
       <div class="logo-container">
-        <img src="homePage/images/logo.png" alt="Ky Long Logo" class="logo" />
+        <img src="homePages/images/logo.png" alt="Ky Long Logo" class="logo" />
         <div class="company-info">
           <div class="company-name">
             <a href="/" title="Công ty TNHH Đầu Tư Thương Mại Dịch Vụ Kỳ Long"
@@ -446,6 +446,6 @@
     </footer>
     <!-- END OF FOOTER SECTION HTML -->
 
-    <script src="servicePage/serviceMain.js"></script>
+    <script src="servicePages/serviceMain.js"></script>
   </body>
 </html>
