--- a/views/aboutPages/aboutMain.html
+++ b/views/aboutPages/aboutMain.html
@@ -1,4 +1,4 @@
-<!-- views/aboutPage/index.html -->
+<!-- views/aboutPage/aboutMain.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,14 +9,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="aboutPages/aboutMain.css" />
   </head>
   <body>
     <!----- HEADER SECTION HTML ----->
     <header class="header">
       <div class="logo-container">
         <img
-          src="../homePage/images/logo.png"
+          src="../homePages/images/logo.png"
           alt="Ky Long Logo"
           class="logo"
         />
